tests/ui/polymorphization/abi_mismatch.stderr
error[E0124]: field `ptr` is already declared
  --> $DIR/abi_mismatch.rs:11:5
   |
LL |     ptr: *mut T,
   |     ----------- `ptr` first declared here
LL |     ptr: NonNull<T>,
   |     ^^^^^^^^^^^^^^^ field already declared

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0124`.
